--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Hello, Panorama VR</title>
-  <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
+  <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 </head>
 
 <body>
   <a-scene>
-    <a-sky src="./images/R0010003_20171205160637.JPG" rotation="0 75 25"></a-sky>
+    <a-sky src="./images/PANO_20200720_153428_2.jpg" rotation="0 75 25"></a-sky>
     <a-text font="kelsonsans" color="#D0104C" value=" I Love KMU " width="6 " position="0 1.75 -1.5 " rotation="0 -10 0 "></a-text>
   </a-scene>
 </body>
