調整首頁圖片

--- a/360-image-gallery.html
+++ b/360-image-gallery.html
@@ -9,8 +9,8 @@
 <body>
   <a-scene>
     <a-sky src="./images/R0010023_20171211103055.jpg" rotation="0 60 0"></a-sky>
-    <a-text font="kelsonsans" color="#D0104C" value=" I Love KMU " width="6" position="0 1.75 -1.5" rotation="0 -10 0"></a-text>
-    <a-text color="#D0104C" value=" 十 " width="6" position="0 1.75 -1.5" rotation="0 -10 0"></a-text>
+    <!-- <a-text font="kelsonsans" color="#D0104C" value=" I Love KMU " width="6" position="0 1.75 -1.5" rotation="0 -10 0"></a-text> -->
+    <!-- <a-text color="#D0104C" value=" 十 " width="6" position="0 1.75 -1.5" rotation="0 -10 0"></a-text> -->
   </a-scene>
 </body>
 
