--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 <body>
   <a-scene>
-    <a-sky src="./images/PANO_20200720_153428_2.jpg" rotation="0 75 25"></a-sky>
-    <a-text font="kelsonsans" color="#D0104C" value=" I Love KMU " width="6 " position="0 1.75 -1.5 " rotation="0 -10 0 "></a-text>
+    <a-sky src="./images/R0010003_20171205160637.JPG" rotation="0 75 25"></a-sky>
+    <!-- <a-text font="kelsonsans" color="#D0104C" value=" I Love KMU " width="6 " position="0 1.75 -1.5 " rotation="0 -10 0 "></a-text> -->
   </a-scene>
 </body>
 
